feat:添加copy-webpack-plugin

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   <title><%= htmlWebpackPlugin.options.config.title %></title>
 </head>
 <body>
+  <script src="js/test.js"></script>
 </body>
 </html>
